feat: clean up redundant code and fix (#42)
* feat: clean up redundant code

* feat: any user owns the workplace directory by default

* chore: remove the debug code

* fix the role menu page logic

* fix default menu generation

* chore: add yarn.lock to gitignore

* chore: remove the watch function that has no effect

* chore: update package.json

* fix: update package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "arco-design-pro-vue",
-  "description": "Arco Design Pro for Vue",
-  "version": "1.0.0",
-  "private": true,
-  "author": "ArcoDesign Team",
+  "name": "fba-ui",
+  "description": "FastAPI Best Architecture UI",
+  "version": "0.0.1",
+  "private": false,
+  "author": "FastAPI Practices",
   "license": "MIT",
   "scripts": {
     "dev": "vite --config ./config/vite.config.dev.ts",
@@ -11,8 +11,7 @@
     "report": "cross-env REPORT=true npm run build",
     "preview": "npm run build && vite preview --host",
     "type:check": "vue-tsc --noEmit --skipLibCheck",
-    "lint-staged": "npx lint-staged",
-    "prepare": "husky install"
+    "lint-staged": "npx lint-staged"
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
@@ -51,7 +50,6 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/lodash": "^4.14.186",
-    "@types/mockjs": "^1.0.7",
     "@types/nprogress": "^0.2.0",
     "@types/sortablejs": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
@@ -68,7 +66,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.6.0",
-    "husky": "^8.0.1",
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
     "mockjs": "^1.1.0",
